--- a/src/app/drafts/draft-overview/draft-form/draft-form-new/draft-form-new.component.html
+++ b/src/app/drafts/draft-overview/draft-form/draft-form-new/draft-form-new.component.html
@@ -1,7 +1,5 @@
 <div class="flex justify-center w-full p-4">
-  <div
-    class="w-full m-2 border-2 max-w-400 bg-aTeam-100 rounded-xl border-aTeam-200"
-  >
+  <div class="w-full m-2 max-w-400 rounded-xl">
     <div class="flex items-center space-x-4">
       <button
         [routerLink]="['/', draftPath]"
