--- a/src/app/images/sprite/sprite.component.html
+++ b/src/app/images/sprite/sprite.component.html
@@ -2,7 +2,7 @@
   <img
     [matTooltip]="tooltipPosition ? this.name : null"
     [matTooltipPosition]="tooltipPosition ?? 'above'"
-    [ngClass]="this.classes"
+    [ngClass]="classes"
     [ngStyle]="{
       width: size,
       height: size,
