--- a/src/app/util/pokemon-select/pokemon-select.component.html
+++ b/src/app/util/pokemon-select/pokemon-select.component.html
@@ -4,7 +4,7 @@
   #trigger="cdkOverlayOrigin"
   #pokemonForm
 >
-  <mat-form-field class="w-full">
+  <mat-form-field class="w-full" [appearance]="appearance">
     @if (showSprite !== null && setPokemon) {
       <div matPrefix class="selected-sprite">
         <sprite [flipped]="true" [pokemon]="setPokemon"></sprite>
