--- a/src/app/util/forms/team-form/team-form.component.scss
+++ b/src/app/util/forms/team-form/team-form.component.scss
@@ -2,9 +2,9 @@
 
 cdk-accordion-item {
   display: block;
-  padding: 2px 0;
-  background-color: var(--mat-sys-surface-variant);
-
+  &:not(:last-child) {
+    border-bottom: 1px solid var(--mat-sys-outline-variant);
+  }
   .item-header {
     display: flex;
     justify-content: space-between;
@@ -15,6 +15,10 @@ cdk-accordion-item {
       margin: 2px 0;
       width: 4rem;
       height: 4rem;
+    }
+
+    mat-icon {
+      color: var(--mat-sys-on-surface-variant);
     }
   }
 
@@ -38,20 +42,111 @@ cdk-accordion {
 }
 
 .tera-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  max-width: 15rem;
-  img {
-    flex-grow: 0;
+  display: grid;
+  grid-template-columns: repeat(7, minmax(0, 1fr));
+  padding: 0.125rem;
+  align-items: center;
+  justify-items: start;
+
+  .type-wrapper:nth-child(13n + 6) {
+    grid-column: span 2 / span 2;
+  }
+
+  .type-wrapper:nth-child(13n + 1),
+  .type-wrapper:nth-child(13n + 2),
+  .type-wrapper:nth-child(13n + 3),
+  .type-wrapper:nth-child(13n + 4),
+  .type-wrapper:nth-child(13n + 5),
+  .type-wrapper:nth-child(13n + 6) {
+    transform: translateX(50%);
+  }
+
+  .type-wrapper {
     width: 2rem;
     height: 2rem;
   }
 }
 
+.z-container {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  padding: 0.125rem;
+  margin: 0 0.5rem;
+  gap: 0.125rem;
+  align-items: center;
+  justify-items: start;
+
+  .type-wrapper:nth-child(7n + 7) {
+    grid-column: span 2 / span 2;
+  }
+
+  .type-wrapper:nth-child(7n + 5),
+  .type-wrapper:nth-child(7n + 6),
+  .type-wrapper:nth-child(7n + 7) {
+    transform: translateX(50%);
+  }
+
+  .type-wrapper {
+    width: 3rem;
+    height: 1rem;
+  }
+}
+
 .captain-container {
   display: flex;
+  width: 100%;
   flex-wrap: wrap;
+  justify-content: center;
+  > :not(:first-child) {
+    margin-left: 1rem;
+  }
+
+  .type-wrapper {
+    align-items: center;
+    display: flex;
+    cursor: pointer;
+
+    &:not(.selected-type) {
+      opacity: 0.5;
+    }
+  }
+
+  .captain-subcontainer {
+    .allnone-bar {
+      padding: 0.25rem 0 0;
+      display: flex;
+      justify-content: center;
+      color: var(--mat-sys-on-surface-variant);
+      > :not(:first-child) {
+        margin-left: 0.25rem;
+      }
+      .allnone {
+        grid-column: span 2 / span 2;
+        background-color: var(--mat-sys-primary);
+        color: var(--mat-sys-on-primary);
+        width: 3rem;
+        height: 1.25rem;
+        font-size: 0.8em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 4rem;
+        &:hover {
+          opacity: 0.9;
+        }
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+.advanced-container {
+  flex-direction: row;
+  padding: 0.25rem 0;
+  mat-form-field {
+    width: 100%;
+    padding: 0 0.25rem;
+  }
 }
 
 .add-bar {
@@ -60,10 +155,6 @@ cdk-accordion {
   display: flex;
   justify-content: space-between;
   @include mat.button-density(1);
-}
-
-mat-icon {
-  color: var(--mat-sys-on-surface-variant);
 }
 
 .drag-icon {
@@ -75,8 +166,20 @@ mat-icon {
   height: 4rem;
 }
 
+.settings-icon {
+  transition: transform 1s ease-in-out;
+
+  .cdk-accordion-item[aria-expanded="true"] & {
+    transform: rotate(180deg);
+  }
+
+  .cdk-accordion-item[aria-expanded="false"] & {
+    transform: rotate(0deg);
+  }
+}
+
 mat-tab-group {
-  background-color: var(--mat-sys-surface);
+  background-color: var(--mat-sys-surface-variant);
 
   .tab-icon-wrapper {
     margin-left: 0.25rem;
@@ -90,18 +193,28 @@ mat-tab-group {
   }
 }
 
-// .main-container {
-//   @include mat.tabs-overrides(
-//     (
-//       active-label-text-color: var(--mat-sys-on-surface-variant),
-//       inactive-label-text-color: var(--mat-sys-on-surface-variant),
-//     )
-//   );
-// }
+.main-container {
+  @include mat.tabs-overrides(
+    (
+      divider-color: var(--mat-sys-outline-variant),
+    )
+  );
+  @include mat.divider-overrides(
+    (
+      color: var(--mat-sys-outline-variant),
+    )
+  );
+}
 
 .icon-container {
   height: 2rem;
   display: flex;
   align-items: center;
   fill: var(--mat-sys-on-surface-variant);
+}
+
+.small-form {
+  @media (min-width: 768px) {
+    max-width: 50%;
+  }
 }
